Primera sección terminada

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <section class="hero">
-        <div>
-            <h1>Check the</h1>best food</h1>
-            <p>Lorem ipsum dolor sti at me, lorem ipsum dolor sti at me, </p>
-            <button>Book a table</button>
+        <div class="info">
+            <h1 class="info-title">Check the</br>best food</h1>
+            <p class="info-subtitle">Lorem ipsum dolor sit at me, ipsum dolor sit at meipsum dolor sit at me </p>
+            <button class="info-button">Book a table</button>
         </div>
+        <img class="hero-image" src="https://i.postimg.cc/zD21m9fG/hero.png" alt="Plato de pasta con salsa y vegetales">
     </section>
 </body>
 </html>
