--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
         </div>
         <img class="hero-image" src="https://i.postimg.cc/zD21m9fG/hero.png" alt="Plato de pasta con salsa y vegetales">
     </section>
+    <section class="dishes">
+        <h2 class="dishes-title">Our services</h2>
+        <div class="dishes-grid">
+            <img class="dishes-item dishes-item__big" src="https://i.postimg.cc/k5qHRc5H/video.png" alt="Una mesa con platos de pasta">
+            <img class="dishes-item" src="https://i.postimg.cc/qR0pRyfB/dish1.png" alt="Bowl de vegetales">
+            <img class="dishes-item" src="https://i.postimg.cc/Wp5sNd5j/dish2.png" alt="Bowl de vegetales">
+            <img class="dishes-item" src="https://i.postimg.cc/hPwgmHF5/dish3.png" alt="Bowl de vegetales">
+            <img class="dishes-item" src="https://i.postimg.cc/MG08hHnC/dish4.png" alt="Bowl de vegetales">
+        </div>
+        
+    </section>
 </body>
 </html>
