--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
             <img class="dishes-item" src="https://i.postimg.cc/hPwgmHF5/dish3.png" alt="Bowl de vegetales">
             <img class="dishes-item" src="https://i.postimg.cc/MG08hHnC/dish4.png" alt="Bowl de vegetales">
         </div>
-        
+    </section>
+    <section class="menu">
+        <h2 class="menu-title">Home Menu</h2>
+        <div class="menu-grid">
+            <div class="menu-grid-item">
+                <img src="https://i.postimg.cc/15g1yJgc/plate1.png" alt="Plato de pasta con salsa y vegetales">
+            </div>
+            <div class="menu-grid-item">
+                <img src="https://i.postimg.cc/cH1P2my3/plate2.png" alt="Plato de pasta con salsa y vegetales">
+            </div>
+            <div class="menu-grid-item">
+                <img src="https://i.postimg.cc/rs3bd2dG/plate3.png" alt="Plato de pasta con salsa y vegetales">
+            </div>
+            <div class="menu-grid-item">
+                <img src="https://i.postimg.cc/Fsk8MzqT/plate4.png" alt="Plato de pasta con salsa y vegetales">
+            </div>
+            <div class="menu-grid-item">
+                <img src="https://i.postimg.cc/rw63Mc2M/plate5.png" alt="Plato de pasta con salsa y vegetales">
+            </div>
+        </div>
     </section>
 </body>
 </html>
